--- a/crm-web/src/main/webapp/WEB-INF/web.xml
+++ b/crm-web/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,20 @@
         <servlet-name>dispatcherServlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-    
 
+    <!--解决跨域问题-->
+    <filter>
+        <filter-name>myCorsFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <init-param>
+            <param-name>targetBeanName</param-name>
+            <param-value>corsFilter</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>myCorsFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
