--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>crm-mapper</module>
         <module>crm-service</module>
         <module>crm-web</module>
+        <module>common-cors</module>
     </modules>
 
     <!--<properties>-->
