--- a/common-cors/pom.xml
+++ b/common-cors/pom.xml
@@ -8,29 +8,15 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>war</packaging>
-    <artifactId>crm-web</artifactId>
+
+    <artifactId>common-cors</artifactId>
 
     <dependencies>
-
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
+            <artifactId>spring-web</artifactId>
             <version>5.1.9.RELEASE</version>
         </dependency>
-
-        <dependency>
-            <groupId>cn.javasm</groupId>
-            <artifactId>crm-service</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>cn.javasm</groupId>
-            <artifactId>common-cors</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
     </dependencies>
 
 
