--- a/crm-service/pom.xml
+++ b/crm-service/pom.xml
@@ -44,6 +44,12 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>5.1.9.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
